# aws_iot_programs

./: Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac
aclocal-copy/: libtool.m4  ltargz.m4  ltdl.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4  pkg.m4
data/: iotgenkeys.service  openssl.cnf
src/: aws_iot_config.h  main.c
